<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CyberEar</string>
    <string name="action_settings">Settings</string>
    <string name="invite">CyberEar</string>
    <!--
            <string name="config_button">Select Configuration\n\nor\n\nSet Up New Custom Configuration</string>
    		<string name="run_button">RUN</string>
    -->
    <string name="config_button">Get Started</string>
    <string name="run_button">Instructions</string>
    <string name="title_activity_mic_repeater">Hearing Amplifier</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_start">Start Playback</string>
    <string name="set_freq">Set Freq</string>
    <string name="freq_hint">Enter Freq</string>
    <string name="set_amp">Set Amplitude</string>
    <string name="amp_hint">Enter Amplitude</string>
    <string name="avg_value">Decibels</string>
    <string name="vol_value">Volume</string>
    <string name="vol_up">Vol Up</string>
    <string name="vol_dn">Vol Dn</string>
    <string name="amp_up">Amp Up</string>
    <string name="amp_dn">Amp Dn</string>
    <string name="left_up">Left Up</string>
    <string name="center">Center</string>
    <string name="bal_ratio">Bal Ratio</string>
    <string name="balance_marker">Balance</string>
    <string name="test_volume_text">10</string>
    <string name="end_activity_button">Back</string>
    <string name="title_activity_select_user">Select User</string>
    <string name="bass">Increase Bass</string>
    <string name="hiss">Decrease Hiss</string>
    <string name="revert">Revert</string>
    <string name="imp_prot_off">Impulse Protection Off</string>
    <string name="main_guidance">Tap Logo to Start/Stop</string>
    <string name="main_guidance2">Scroll for Settings</string>

    <!-- from HearingCheck by Seung -->
    <string name="first_screen">First Screen</string>
    <string name="start_button">Start</string>
    <string name="enter_name">New User Enter Name Here</string>
    <string name="hearing_check">Hearing Check</string>
    <string name="start_test">Start Test</string>
    <string name="can_hear">I Can Hear</string>
    <string name="title_activity_hearing_check">Hearing Check</string>
    <string name="select_name">Select Name</string>
    <string name="progress">Progress</string>
    <string name="abort">Quit Checking</string>
    <string name="title_activity_instruction">Instruction</string>
    
    <!--  from Instruction by Seung -->
    <string name="how_to_use">How to use?</string>

</resources>
