<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

<RelativeLayout 
    android:id="@+id/rlSelectUser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SelectUserActivity" >

<!--    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/ce_color" />-->

<!--    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/textView1"
        android:text="@string/enter_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/ce_color" />-->

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColor="@color/ce_color" />

    <Button
        android1:id="@+id/button1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/editText1"
        android1:layout_alignRight="@+id/editText1"
        android1:layout_below="@+id/editText1"
        android1:text="@string/start_button"
        android:background="@color/ce_color"
        android:textColor="@android:color/white" />

    <RadioGroup
        android1:id="@+id/radioGroup1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/button1"
        android1:layout_alignRight="@+id/button1"
        android1:layout_below="@+id/button1"
        android1:layout_marginTop="78dp" >

        
    </RadioGroup>

    <TextView
        android1:id="@+id/textView3"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/button1"
        android1:layout_below="@+id/button1"
        android1:layout_marginTop="27dp"
        android1:text="@string/select_name"
        android:textColor="@color/ce_color"
        android1:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android1:id="@+id/button2"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/radioGroup1"
        android1:layout_alignRight="@+id/radioGroup1"
        android1:layout_below="@+id/radioGroup1"
        android1:layout_marginTop="16dp"
        android1:text="@string/start_button"
        android:textColor="@android:color/white"
        android:background="@color/ce_color" />
    
</RelativeLayout>
</ScrollView>
